# hl-clipper2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  generate-hl-cpp.sh  haxelib.json  install.sh  setup.sh  test.hxml
generator/: Generator.hx
generator/clip/: Generator.hx
lib/clip/: Native.hx  clip.idl
src/: hl-clip.h  idl_hl.cpp
tests/: Test.hx
